fix overlap in menu on small width screens

--- a/static/css/windowed.css
+++ b/static/css/windowed.css
@@ -3,7 +3,8 @@
 }
 
 header {
-    height: 100px;
+    height: auto;
+    margin-bottom: 10px;
 }
 
 header > nav {
